changed form style

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -25,69 +25,74 @@
 <body id="top">
     <!-- Login 1 section start -->
     <div class="login-1">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row login-box">
-                <div class="col-lg-6 pad-0 none-992 bg-img">
-                    <div class="info">
-                        <div class="header-text">
-                            <h1>Welcome <span>to KOKO</span></h1>
-                        </div>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                            galley of type and scrambled it to make a type specimen book. make a type specimen book.
-                            make a type specimen book.</p>
-                    </div>
-                </div>
-                <div class="col-lg-6 align-self-center pad-0 form-section">
-                    <div class="form-inner">
-                        <a href="index.html" class="logo">
-                         <h2>KOKO</h2>
-                        </a>
-                        <h3>Recover Your Password</h3>
-                        <div class="alert alert-success alert-dismissible fade show" role="alert">
-                            <strong>Congrats,</strong> and email has been sent to your email.
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                        <form action="#" method="POST" id="commonForm">
-                            <div class="form-group position-relative clearfix">
-                                <input name="email" type="email" class="form-control" placeholder="Email Address"
-                                    aria-label="Email Address">
-                                <div class="login-popover login-popover-abs" data-bs-toggle="popover"
-                                    data-bs-trigger="hover" title="Clarification"
-                                    data-bs-content="And here's some amazing content. It's very engaging. Right?">
-                                    <i class="fa fa-info-circle"></i>
+                <div class="col-lg-10 col-md-12 col-sm-12 offset-lg-1">
+                    <div class="row">
+                        <div class="col-lg-6 pad-0 none-992 bg-img">
+                            <div class="info">
+                                <div class="header-text">
+                                    <h2>Welcome to<span style="color: #FFC127;"> KOKO</span></h2>
                                 </div>
-                            </div>
-                            <div class="form-group clearfix">
-                                <button type="submit" class="btn btn-primary btn-lg btn-theme">Send Me Email</button>
-                            </div>
-                            <div class="extra-login clearfix">
-                                <span>Or Login With</span>
-                            </div>
-                        </form>
-                        <div class="clearfix"></div>
-                        <div class="social-list clearfix">
-                            <div class="icon facebook">
-                                <div class="tooltip">Facebook</div>
-                                <span><i class="fa fa-facebook"></i></span>
-                            </div>
-                            <div class="icon twitter">
-                                <div class="tooltip">Twitter</div>
-                                <span><i class="fa fa-twitter"></i></span>
-                            </div>
-                            <div class="icon instagram">
-                                <div class="tooltip">Google</div>
-                                <span><i class="fa fa-google"></i></span>
-                            </div>
-                            <div class="icon github mr-0">
-                                <div class="tooltip">Linkedin</div>
-                                <span><i class="fa fa-linkedin"></i></span>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                                    been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                                    galley of type and scrambled it to make a type specimen book. make a type specimen book.
+                                    make a type specimen book.</p>
                             </div>
                         </div>
-                        <p>Already a member? <a href="index.html">Login here</a></p>
+                        <div class="col-lg-6 align-self-center pad-0 form-section">
+                            <div class="form-inner">
+                                <a href="index.html" class="logo">
+                                 <h2>KOKO</h2>
+                                </a>
+                                <h3>Recover Your Password</h3>
+                                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                    <strong>Congrats,</strong> and email has been sent to your email.
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                                <form action="#" method="POST" id="commonForm">
+                                    <div class="form-group position-relative clearfix">
+                                        <input name="email" type="email" class="form-control" placeholder="Email Address"
+                                            aria-label="Email Address">
+                                        <div class="login-popover login-popover-abs" data-bs-toggle="popover"
+                                            data-bs-trigger="hover" title="Clarification"
+                                            data-bs-content="And here's some amazing content. It's very engaging. Right?">
+                                            <i class="fa fa-info-circle"></i>
+                                        </div>
+                                    </div>
+                                    <div class="form-group clearfix">
+                                        <button type="submit" class="btn btn-primary btn-lg btn-theme">Send Me Email</button>
+                                    </div>
+                                    <div class="extra-login clearfix">
+                                        <span>Or Login With</span>
+                                    </div>
+                                </form>
+                                <div class="clearfix"></div>
+                                <div class="social-list clearfix">
+                                    <div class="icon facebook">
+                                        <div class="tooltip">Facebook</div>
+                                        <span><i class="fa fa-facebook"></i></span>
+                                    </div>
+                                    <div class="icon twitter">
+                                        <div class="tooltip">Twitter</div>
+                                        <span><i class="fa fa-twitter"></i></span>
+                                    </div>
+                                    <div class="icon instagram">
+                                        <div class="tooltip">Google</div>
+                                        <span><i class="fa fa-google"></i></span>
+                                    </div>
+                                    <div class="icon github mr-0">
+                                        <div class="tooltip">Linkedin</div>
+                                        <span><i class="fa fa-linkedin"></i></span>
+                                    </div>
+                                </div>
+                                <p>Already a member? <a href="index.html">Login here</a></p>
+                            </div>
+                        </div>
+        
+        
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
